{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 854,
  "lineage": "cd111cf1-d2d8-0889-7fae-f0709d578c3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "kubernetes_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:244208672477:loadbalancer/kubernetes",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "dns_name": "kubernetes-1136356166.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/healthz",
                "timeout": 15,
                "unhealthy_threshold": 2
              }
            ],
            "id": "kubernetes",
            "idle_timeout": 60,
            "instances": [
              "i-026e8698aa93de56b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "TCP",
                "lb_port": 6443,
                "lb_protocol": "TCP"
              }
            ],
            "name": "kubernetes",
            "security_groups": [
              "sg-09aabc32c3d700ce9"
            ],
            "source_security_group": "244208672477/kubernetes-api",
            "source_security_group_id": "sg-09aabc32c3d700ce9",
            "subnets": [
              "subnet-0095c5d8d2afb6321"
            ],
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_iam_instance_profile.kubernetes",
            "aws_iam_role.kubernetes",
            "aws_instance.controller",
            "aws_key_pair.k8contrl_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-40d28157",
            "arn": "arn:aws:ec2:us-east-1:244208672477:instance/i-026e8698aa93de56b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kubernetes",
            "id": "i-026e8698aa93de56b",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8contrl_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091cb093ccc5d745c",
            "private_dns": "ip-10-43-0-20.ec2.internal",
            "private_ip": "10.43.0.20",
            "public_dns": "ec2-54-87-242-219.compute-1.amazonaws.com",
            "public_ip": "54.87.242.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0df749d497962a5ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0095c5d8d2afb6321",
            "tags": {
              "Name": "controller-0",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller0",
              "ansibleNodeType": "controller"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-089c885e3feaec1e8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.kubernetes",
            "aws_iam_role.kubernetes",
            "aws_key_pair.k8contrl_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "etcd",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-40d28157",
            "arn": "arn:aws:ec2:us-east-1:244208672477:instance/i-0a296c57e4a7cfec9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a296c57e4a7cfec9",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "etcd_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e31f211733108839",
            "private_dns": "ip-10-43-0-10.ec2.internal",
            "private_ip": "10.43.0.10",
            "public_dns": "ec2-18-209-245-97.compute-1.amazonaws.com",
            "public_ip": "18.209.245.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c163c25e9a92fe48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0095c5d8d2afb6321",
            "tags": {
              "Name": "etcd-0",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "etcd0",
              "ansibleNodeType": "etcd"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-089c885e3feaec1e8"
            ]
          },
          "dependencies": [
            "aws_key_pair.etcd_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-40d28157",
            "arn": "arn:aws:ec2:us-east-1:244208672477:instance/i-02f7a98c44cafb292",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f7a98c44cafb292",
            "instance_state": "running",
            "instance_type": "t2.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "k8worker_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08112d07fbfbc74ab",
            "private_dns": "ip-10-43-0-30.ec2.internal",
            "private_ip": "10.43.0.30",
            "public_dns": "ec2-3-236-167-201.compute-1.amazonaws.com",
            "public_ip": "3.236.167.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-067d126807e8164af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0095c5d8d2afb6321",
            "tags": {
              "Name": "worker-0",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker0",
              "ansibleNodeType": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-089c885e3feaec1e8"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8worker_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-40d28157",
            "arn": "arn:aws:ec2:us-east-1:244208672477:instance/i-06b9f97baef09607f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b9f97baef09607f",
            "instance_state": "running",
            "instance_type": "t2.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "k8worker_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0262f684048865336",
            "private_dns": "ip-10-43-0-31.ec2.internal",
            "private_ip": "10.43.0.31",
            "public_dns": "ec2-3-237-198-211.compute-1.amazonaws.com",
            "public_ip": "3.237.198.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0575511021beb0e2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0095c5d8d2afb6321",
            "tags": {
              "Name": "worker-1",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker1",
              "ansibleNodeType": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-089c885e3feaec1e8"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8worker_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-40d28157",
            "arn": "arn:aws:ec2:us-east-1:244208672477:instance/i-0c78e62a3c361cf86",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c78e62a3c361cf86",
            "instance_state": "running",
            "instance_type": "t2.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "k8worker_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0067174606ac24bd5",
            "private_dns": "ip-10-43-0-32.ec2.internal",
            "private_ip": "10.43.0.32",
            "public_dns": "ec2-35-153-126-121.compute-1.amazonaws.com",
            "public_ip": "35.153.126.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e6de3bd238ad7e49",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0095c5d8d2afb6321",
            "tags": {
              "Name": "worker-2",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker2",
              "ansibleNodeType": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-089c885e3feaec1e8"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8worker_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244208672477:internet-gateway/igw-054dfd3bcd1d8cd8d",
            "id": "igw-054dfd3bcd1d8cd8d",
            "owner_id": "244208672477",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "vpc_id": "vpc-0348081a6fd9f002b"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f202cbf16093269a",
            "owner_id": "244208672477",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054dfd3bcd1d8cd8d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "vpc_id": "vpc-0348081a6fd9f002b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3ec2e1cca2c3142",
            "route_table_id": "rtb-0f202cbf16093269a",
            "subnet_id": "subnet-0095c5d8d2afb6321"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.kubernetes",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244208672477:security-group/sg-089c885e3feaec1e8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089c885e3feaec1e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.43.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-09aabc32c3d700ce9"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kubernetes",
            "name_prefix": "",
            "owner_id": "244208672477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348081a6fd9f002b"
          },
          "dependencies": [
            "aws_security_group.kubernetes_api",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244208672477:security-group/sg-09aabc32c3d700ce9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09aabc32c3d700ce9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "kubernetes-api",
            "name_prefix": "",
            "owner_id": "244208672477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-api",
              "Owner": "Kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348081a6fd9f002b"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244208672477:subnet/subnet-0095c5d8d2afb6321",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.43.0.0/16",
            "id": "subnet-0095c5d8d2afb6321",
            "map_public_ip_on_launch": false,
            "owner_id": "244208672477",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "vpc_id": "vpc-0348081a6fd9f002b"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244208672477:vpc/vpc-0348081a6fd9f002b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.43.0.0/16",
            "default_network_acl_id": "acl-0db8bd05c4082c873",
            "default_route_table_id": "rtb-05ec2ef0d2766a80b",
            "default_security_group_id": "sg-06eaf10f8a26095f2",
            "dhcp_options_id": "dopt-470eef3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0348081a6fd9f002b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05ec2ef0d2766a80b",
            "owner_id": "244208672477",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            }
          }
        }
      ]
    }
  ]
}